# duckling

./: .gitignore  duckling.cabal  package-lock.json  package.json  serverless.yml  stack.yaml
exe/: Lib.hs  Main.hs
