name:                duckling
version:             0.1.6.0
synopsis:            A Haskell library for parsing text into structured data.
description:
  Duckling is a library for parsing text into structured data.
homepage:            https://github.com/facebook/duckling#readme
bug-reports:         https://github.com/facebook/duckling/issues
license:             OtherLicense
license-files:       LICENSE,PATENTS
author:              Facebook, Inc.
maintainer:          duckling-team@fb.com
copyright:           Copyright (c) 2014-present, Facebook, Inc.
category:            Systems
build-type:          Simple
stability:           alpha
cabal-version:       >=1.10
tested-with:
  GHC==8.0.2,
  GHC==8.2.1

extra-source-files:    README.md
                     , PATENTS

library
  exposed-modules:     Duckling.Core
                     , Duckling.Debug
                     , Duckling.Testing.Types
  -- ------------------------------------------------------------------
  -- Core
                     , Duckling.Api
                     , Duckling.Engine
                     , Duckling.Engine.Regex
                     , Duckling.Locale
                     , Duckling.Region
                     , Duckling.Resolve
                     , Duckling.Types
                     , Duckling.Types.Document
                     , Duckling.Types.Stash

  -- ------------------------------------------------------------------
  -- Rules
                     , Duckling.Rules
                     , Duckling.Rules.Common
                     , Duckling.Rules.AR
                     , Duckling.Rules.BG
                     , Duckling.Rules.CS
                     , Duckling.Rules.DA
                     , Duckling.Rules.DE
                     , Duckling.Rules.EL
                     , Duckling.Rules.EN
                     , Duckling.Rules.ES
                     , Duckling.Rules.ET
                     , Duckling.Rules.FR
                     , Duckling.Rules.GA
                     , Duckling.Rules.HE
                     , Duckling.Rules.HI
                     , Duckling.Rules.HR
                     , Duckling.Rules.HU
                     , Duckling.Rules.ID
                     , Duckling.Rules.IT
                     , Duckling.Rules.JA
                     , Duckling.Rules.KA
                     , Duckling.Rules.KO
                     , Duckling.Rules.MY
                     , Duckling.Rules.NB
                     , Duckling.Rules.NE
                     , Duckling.Rules.NL
                     , Duckling.Rules.PL
                     , Duckling.Rules.PT
                     , Duckling.Rules.RO
                     , Duckling.Rules.RU
                     , Duckling.Rules.SV
                     , Duckling.Rules.TA
                     , Duckling.Rules.TR
                     , Duckling.Rules.UK
                     , Duckling.Rules.VI
                     , Duckling.Rules.ZH

  -- ------------------------------------------------------------------
  -- Ranking
                     , Duckling.Ranking.Types
                     , Duckling.Ranking.Extraction
                     , Duckling.Ranking.Rank
                     , Duckling.Ranking.Classifiers
                     , Duckling.Ranking.Classifiers.AR_XX
                     , Duckling.Ranking.Classifiers.BG_XX
                     , Duckling.Ranking.Classifiers.CS_XX
                     , Duckling.Ranking.Classifiers.DA_XX
                     , Duckling.Ranking.Classifiers.DE_XX
                     , Duckling.Ranking.Classifiers.EL_XX
                     , Duckling.Ranking.Classifiers.EN_CA
                     , Duckling.Ranking.Classifiers.EN_GB
                     , Duckling.Ranking.Classifiers.EN_US
                     , Duckling.Ranking.Classifiers.EN_XX
                     , Duckling.Ranking.Classifiers.ES_XX
                     , Duckling.Ranking.Classifiers.ET_XX
                     , Duckling.Ranking.Classifiers.FR_XX
                     , Duckling.Ranking.Classifiers.GA_XX
                     , Duckling.Ranking.Classifiers.HE_XX
                     , Duckling.Ranking.Classifiers.HI_XX
                     , Duckling.Ranking.Classifiers.HR_XX
                     , Duckling.Ranking.Classifiers.HU_XX
                     , Duckling.Ranking.Classifiers.ID_XX
                     , Duckling.Ranking.Classifiers.IT_XX
                     , Duckling.Ranking.Classifiers.JA_XX
                     , Duckling.Ranking.Classifiers.KA_XX
                     , Duckling.Ranking.Classifiers.KO_XX
                     , Duckling.Ranking.Classifiers.MY_XX
                     , Duckling.Ranking.Classifiers.NB_XX
                     , Duckling.Ranking.Classifiers.NE_XX
                     , Duckling.Ranking.Classifiers.NL_BE
                     , Duckling.Ranking.Classifiers.NL_NL
                     , Duckling.Ranking.Classifiers.NL_XX
                     , Duckling.Ranking.Classifiers.PL_XX
                     , Duckling.Ranking.Classifiers.PT_XX
                     , Duckling.Ranking.Classifiers.RO_XX
                     , Duckling.Ranking.Classifiers.RU_XX
                     , Duckling.Ranking.Classifiers.SV_XX
                     , Duckling.Ranking.Classifiers.TA_XX
                     , Duckling.Ranking.Classifiers.TR_XX
                     , Duckling.Ranking.Classifiers.UK_XX
                     , Duckling.Ranking.Classifiers.VI_XX
                     , Duckling.Ranking.Classifiers.ZH_CN
                     , Duckling.Ranking.Classifiers.ZH_HK
                     , Duckling.Ranking.Classifiers.ZH_MO
                     , Duckling.Ranking.Classifiers.ZH_TW
                     , Duckling.Ranking.Classifiers.ZH_XX

  -- ------------------------------------------------------------------
  -- Dimensions
                     , Duckling.Dimensions
                     , Duckling.Dimensions.Common
                     , Duckling.Dimensions.Types
                     , Duckling.Dimensions.AR
                     , Duckling.Dimensions.BG
                     , Duckling.Dimensions.CS
                     , Duckling.Dimensions.DA
                     , Duckling.Dimensions.DE
                     , Duckling.Dimensions.EL
                     , Duckling.Dimensions.EN
                     , Duckling.Dimensions.ES
                     , Duckling.Dimensions.ET
                     , Duckling.Dimensions.FR
                     , Duckling.Dimensions.GA
                     , Duckling.Dimensions.HE
                     , Duckling.Dimensions.HI
                     , Duckling.Dimensions.HR
                     , Duckling.Dimensions.HU
                     , Duckling.Dimensions.ID
                     , Duckling.Dimensions.IT
                     , Duckling.Dimensions.JA
                     , Duckling.Dimensions.KA
                     , Duckling.Dimensions.KO
                     , Duckling.Dimensions.MY
                     , Duckling.Dimensions.NB
                     , Duckling.Dimensions.NE
                     , Duckling.Dimensions.NL
                     , Duckling.Dimensions.PL
                     , Duckling.Dimensions.PT
                     , Duckling.Dimensions.RO
                     , Duckling.Dimensions.RU
                     , Duckling.Dimensions.SV
                     , Duckling.Dimensions.TA
                     , Duckling.Dimensions.TR
                     , Duckling.Dimensions.UK
                     , Duckling.Dimensions.VI
                     , Duckling.Dimensions.ZH

                     -- AmountOfMoney
                     , Duckling.AmountOfMoney.AR.Corpus
                     , Duckling.AmountOfMoney.AR.Rules
                     , Duckling.AmountOfMoney.EN.AU.Corpus
                     , Duckling.AmountOfMoney.EN.AU.Rules
                     , Duckling.AmountOfMoney.EN.BZ.Corpus
                     , Duckling.AmountOfMoney.EN.BZ.Rules
                     , Duckling.AmountOfMoney.EN.CA.Corpus
                     , Duckling.AmountOfMoney.EN.CA.Rules
                     , Duckling.AmountOfMoney.EN.Corpus
                     , Duckling.AmountOfMoney.EN.GB.Corpus
                     , Duckling.AmountOfMoney.EN.GB.Rules
                     , Duckling.AmountOfMoney.EN.IE.Corpus
                     , Duckling.AmountOfMoney.EN.IE.Rules
                     , Duckling.AmountOfMoney.EN.IN.Corpus
                     , Duckling.AmountOfMoney.EN.IN.Rules
                     , Duckling.AmountOfMoney.EN.JM.Corpus
                     , Duckling.AmountOfMoney.EN.JM.Rules
                     , Duckling.AmountOfMoney.EN.NZ.Corpus
                     , Duckling.AmountOfMoney.EN.NZ.Rules
                     , Duckling.AmountOfMoney.EN.PH.Corpus
                     , Duckling.AmountOfMoney.EN.PH.Rules
                     , Duckling.AmountOfMoney.EN.Rules
                     , Duckling.AmountOfMoney.EN.TT.Corpus
                     , Duckling.AmountOfMoney.EN.TT.Rules
                     , Duckling.AmountOfMoney.EN.US.Corpus
                     , Duckling.AmountOfMoney.EN.US.Rules
                     , Duckling.AmountOfMoney.EN.ZA.Corpus
                     , Duckling.AmountOfMoney.EN.ZA.Rules
                     , Duckling.AmountOfMoney.BG.Corpus
                     , Duckling.AmountOfMoney.BG.Rules
                     , Duckling.AmountOfMoney.ES.Corpus
                     , Duckling.AmountOfMoney.ES.Rules
                     , Duckling.AmountOfMoney.FR.Corpus
                     , Duckling.AmountOfMoney.FR.Rules
                     , Duckling.AmountOfMoney.GA.Corpus
                     , Duckling.AmountOfMoney.GA.Rules
                     , Duckling.AmountOfMoney.HR.Corpus
                     , Duckling.AmountOfMoney.HR.Rules
                     , Duckling.AmountOfMoney.ID.Corpus
                     , Duckling.AmountOfMoney.ID.Rules
                     , Duckling.AmountOfMoney.KO.Corpus
                     , Duckling.AmountOfMoney.KO.Rules
                     , Duckling.AmountOfMoney.NB.Corpus
                     , Duckling.AmountOfMoney.NB.Rules
                     , Duckling.AmountOfMoney.PT.Corpus
                     , Duckling.AmountOfMoney.PT.Rules
                     , Duckling.AmountOfMoney.RO.Corpus
                     , Duckling.AmountOfMoney.RO.Rules
                     , Duckling.AmountOfMoney.RU.Corpus
                     , Duckling.AmountOfMoney.RU.Rules
                     , Duckling.AmountOfMoney.SV.Corpus
                     , Duckling.AmountOfMoney.SV.Rules
                     , Duckling.AmountOfMoney.VI.Corpus
                     , Duckling.AmountOfMoney.VI.Rules
                     , Duckling.AmountOfMoney.NL.Corpus
                     , Duckling.AmountOfMoney.NL.Rules
                     , Duckling.AmountOfMoney.ZH.Corpus
                     , Duckling.AmountOfMoney.ZH.Rules
                     , Duckling.AmountOfMoney.Helpers
                     , Duckling.AmountOfMoney.Rules
                     , Duckling.AmountOfMoney.Types

                     -- Distance
                     , Duckling.Distance.BG.Corpus
                     , Duckling.Distance.BG.Rules
                     , Duckling.Distance.CS.Corpus
                     , Duckling.Distance.CS.Rules
                     , Duckling.Distance.EN.Corpus
                     , Duckling.Distance.EN.Rules
                     , Duckling.Distance.ES.Corpus
                     , Duckling.Distance.ES.Rules
                     , Duckling.Distance.FR.Corpus
                     , Duckling.Distance.FR.Rules
                     , Duckling.Distance.GA.Corpus
                     , Duckling.Distance.GA.Rules
                     , Duckling.Distance.HR.Corpus
                     , Duckling.Distance.HR.Rules
                     , Duckling.Distance.KO.Corpus
                     , Duckling.Distance.KO.Rules
                     , Duckling.Distance.PT.Corpus
                     , Duckling.Distance.PT.Rules
                     , Duckling.Distance.NL.Corpus
                     , Duckling.Distance.NL.Rules
                     , Duckling.Distance.RO.Corpus
                     , Duckling.Distance.RO.Rules
                     , Duckling.Distance.RU.Corpus
                     , Duckling.Distance.RU.Rules
                     , Duckling.Distance.TR.Corpus
                     , Duckling.Distance.TR.Rules
                     , Duckling.Distance.SV.Corpus
                     , Duckling.Distance.SV.Rules
                     , Duckling.Distance.ZH.Corpus
                     , Duckling.Distance.ZH.Rules
                     , Duckling.Distance.Helpers
                     , Duckling.Distance.Rules
                     , Duckling.Distance.Types

                     -- Duration
                     , Duckling.Duration.AR.Corpus
                     , Duckling.Duration.AR.Rules
                     , Duckling.Duration.BG.Corpus
                     , Duckling.Duration.BG.Rules
                     , Duckling.Duration.DA.Rules
                     , Duckling.Duration.DE.Rules
                     , Duckling.Duration.EL.Corpus
                     , Duckling.Duration.EL.Rules
                     , Duckling.Duration.EN.Corpus
                     , Duckling.Duration.EN.Rules
                     , Duckling.Duration.FR.Corpus
                     , Duckling.Duration.FR.Rules
                     , Duckling.Duration.GA.Corpus
                     , Duckling.Duration.GA.Rules
                     , Duckling.Duration.HE.Rules
                     , Duckling.Duration.HI.Corpus
                     , Duckling.Duration.HI.Rules
                     , Duckling.Duration.HR.Rules
                     , Duckling.Duration.HU.Corpus
                     , Duckling.Duration.HU.Rules
                     , Duckling.Duration.IT.Rules
                     , Duckling.Duration.JA.Corpus
                     , Duckling.Duration.KO.Corpus
                     , Duckling.Duration.KO.Rules
                     , Duckling.Duration.NB.Corpus
                     , Duckling.Duration.NB.Rules
                     , Duckling.Duration.NL.Corpus
                     , Duckling.Duration.NL.Rules
                     , Duckling.Duration.PL.Corpus
                     , Duckling.Duration.PL.Rules
                     , Duckling.Duration.PT.Corpus
                     , Duckling.Duration.SV.Corpus
                     , Duckling.Duration.SV.Rules
                     , Duckling.Duration.ZH.Corpus
                     , Duckling.Duration.RO.Corpus
                     , Duckling.Duration.RO.Rules
                     , Duckling.Duration.RU.Corpus
                     , Duckling.Duration.RU.Rules
                     , Duckling.Duration.TR.Corpus
                     , Duckling.Duration.TR.Rules
                     , Duckling.Duration.Helpers
                     , Duckling.Duration.Rules
                     , Duckling.Duration.Types

                     -- Email
                     , Duckling.Email.EN.Corpus
                     , Duckling.Email.EN.Rules
                     , Duckling.Email.FR.Corpus
                     , Duckling.Email.FR.Rules
                     , Duckling.Email.IT.Corpus
                     , Duckling.Email.IT.Rules
                     , Duckling.Email.Corpus
                     , Duckling.Email.Rules
                     , Duckling.Email.Types

                     -- Numeral
                     , Duckling.Numeral.AR.Corpus
                     , Duckling.Numeral.AR.Rules
                     , Duckling.Numeral.BG.Corpus
                     , Duckling.Numeral.BG.Rules
                     , Duckling.Numeral.CS.Corpus
                     , Duckling.Numeral.CS.Rules
                     , Duckling.Numeral.DA.Corpus
                     , Duckling.Numeral.DA.Rules
                     , Duckling.Numeral.DE.Corpus
                     , Duckling.Numeral.DE.Rules
                     , Duckling.Numeral.EL.Corpus
                     , Duckling.Numeral.EL.Rules
                     , Duckling.Numeral.EN.Corpus
                     , Duckling.Numeral.EN.Rules
                     , Duckling.Numeral.ES.Corpus
                     , Duckling.Numeral.ES.Rules
                     , Duckling.Numeral.ET.Corpus
                     , Duckling.Numeral.ET.Rules
                     , Duckling.Numeral.FR.Corpus
                     , Duckling.Numeral.FR.Rules
                     , Duckling.Numeral.GA.Corpus
                     , Duckling.Numeral.GA.Rules
                     , Duckling.Numeral.HE.Corpus
                     , Duckling.Numeral.HE.Rules
                     , Duckling.Numeral.HI.Corpus
                     , Duckling.Numeral.HI.Rules
                     , Duckling.Numeral.HR.Corpus
                     , Duckling.Numeral.HR.Rules
                     , Duckling.Numeral.HU.Corpus
                     , Duckling.Numeral.HU.Rules
                     , Duckling.Numeral.ID.Corpus
                     , Duckling.Numeral.ID.Rules
                     , Duckling.Numeral.IT.Corpus
                     , Duckling.Numeral.IT.Rules
                     , Duckling.Numeral.JA.Corpus
                     , Duckling.Numeral.JA.Rules
                     , Duckling.Numeral.KA.Corpus
                     , Duckling.Numeral.KA.Rules
                     , Duckling.Numeral.KO.Corpus
                     , Duckling.Numeral.KO.Rules
                     , Duckling.Numeral.MY.Corpus
                     , Duckling.Numeral.MY.Rules
                     , Duckling.Numeral.NB.Corpus
                     , Duckling.Numeral.NB.Rules
                     , Duckling.Numeral.NE.Corpus
                     , Duckling.Numeral.NE.Rules
                     , Duckling.Numeral.NL.Corpus
                     , Duckling.Numeral.NL.Rules
                     , Duckling.Numeral.PL.Corpus
                     , Duckling.Numeral.PL.Rules
                     , Duckling.Numeral.PT.Corpus
                     , Duckling.Numeral.PT.Rules
                     , Duckling.Numeral.RU.Corpus
                     , Duckling.Numeral.RU.Rules
                     , Duckling.Numeral.SV.Corpus
                     , Duckling.Numeral.SV.Rules
                     , Duckling.Numeral.TA.Corpus
                     , Duckling.Numeral.TA.Rules
                     , Duckling.Numeral.TR.Corpus
                     , Duckling.Numeral.TR.Rules
                     , Duckling.Numeral.UK.Corpus
                     , Duckling.Numeral.UK.Rules
                     , Duckling.Numeral.VI.Corpus
                     , Duckling.Numeral.VI.Rules
                     , Duckling.Numeral.ZH.Corpus
                     , Duckling.Numeral.ZH.Rules
                     , Duckling.Numeral.RO.Corpus
                     , Duckling.Numeral.RO.Rules
                     , Duckling.Numeral.Helpers
                     , Duckling.Numeral.Rules
                     , Duckling.Numeral.Types

                     -- Ordinal
                     , Duckling.Ordinal.AR.Corpus
                     , Duckling.Ordinal.AR.Rules
                     , Duckling.Ordinal.BG.Corpus
                     , Duckling.Ordinal.BG.Rules
                     , Duckling.Ordinal.DA.Corpus
                     , Duckling.Ordinal.DA.Rules
                     , Duckling.Ordinal.DE.Corpus
                     , Duckling.Ordinal.DE.Rules
                     , Duckling.Ordinal.EL.Corpus
                     , Duckling.Ordinal.EL.Rules
                     , Duckling.Ordinal.EN.Corpus
                     , Duckling.Ordinal.EN.Rules
                     , Duckling.Ordinal.ES.Corpus
                     , Duckling.Ordinal.ES.Rules
                     , Duckling.Ordinal.ET.Corpus
                     , Duckling.Ordinal.ET.Rules
                     , Duckling.Ordinal.FR.Corpus
                     , Duckling.Ordinal.FR.Rules
                     , Duckling.Ordinal.GA.Corpus
                     , Duckling.Ordinal.GA.Rules
                     , Duckling.Ordinal.HE.Corpus
                     , Duckling.Ordinal.HE.Rules
                     , Duckling.Ordinal.HI.Corpus
                     , Duckling.Ordinal.HI.Rules
                     , Duckling.Ordinal.HR.Corpus
                     , Duckling.Ordinal.HR.Rules
                     , Duckling.Ordinal.HU.Corpus
                     , Duckling.Ordinal.HU.Rules
                     , Duckling.Ordinal.ID.Corpus
                     , Duckling.Ordinal.ID.Rules
                     , Duckling.Ordinal.IT.Corpus
                     , Duckling.Ordinal.IT.Rules
                     , Duckling.Ordinal.JA.Corpus
                     , Duckling.Ordinal.JA.Rules
                     , Duckling.Ordinal.KO.Corpus
                     , Duckling.Ordinal.KO.Rules
                     , Duckling.Ordinal.NB.Corpus
                     , Duckling.Ordinal.NB.Rules
                     , Duckling.Ordinal.NL.Corpus
                     , Duckling.Ordinal.NL.Rules
                     , Duckling.Ordinal.PL.Corpus
                     , Duckling.Ordinal.PL.Rules
                     , Duckling.Ordinal.PT.Corpus
                     , Duckling.Ordinal.PT.Rules
                     , Duckling.Ordinal.RO.Corpus
                     , Duckling.Ordinal.RO.Rules
                     , Duckling.Ordinal.RU.Corpus
                     , Duckling.Ordinal.RU.Rules
                     , Duckling.Ordinal.SV.Corpus
                     , Duckling.Ordinal.SV.Rules
                     , Duckling.Ordinal.TR.Corpus
                     , Duckling.Ordinal.TR.Rules
                     , Duckling.Ordinal.UK.Corpus
                     , Duckling.Ordinal.UK.Rules
                     , Duckling.Ordinal.VI.Corpus
                     , Duckling.Ordinal.VI.Rules
                     , Duckling.Ordinal.ZH.Corpus
                     , Duckling.Ordinal.ZH.Rules
                     , Duckling.Ordinal.Helpers
                     , Duckling.Ordinal.Types

                     -- PhoneNumber
                     , Duckling.PhoneNumber.PT.Corpus
                     , Duckling.PhoneNumber.PT.Rules
                     , Duckling.PhoneNumber.Corpus
                     , Duckling.PhoneNumber.Rules
                     , Duckling.PhoneNumber.Types

                     -- Quantity
                     , Duckling.Quantity.AR.Corpus
                     , Duckling.Quantity.AR.Rules
                     , Duckling.Quantity.EN.Corpus
                     , Duckling.Quantity.EN.Rules
                     , Duckling.Quantity.FR.Corpus
                     , Duckling.Quantity.FR.Rules
                     , Duckling.Quantity.HR.Corpus
                     , Duckling.Quantity.HR.Rules
                     , Duckling.Quantity.KO.Corpus
                     , Duckling.Quantity.KO.Rules
                     , Duckling.Quantity.PT.Corpus
                     , Duckling.Quantity.PT.Rules
                     , Duckling.Quantity.RO.Corpus
                     , Duckling.Quantity.RO.Rules
                     , Duckling.Quantity.RU.Corpus
                     , Duckling.Quantity.RU.Rules
                     , Duckling.Quantity.ZH.Corpus
                     , Duckling.Quantity.ZH.Rules
                     , Duckling.Quantity.Helpers
                     , Duckling.Quantity.Types

                     -- Regex
                     , Duckling.Regex.Types

                     -- Temperature
                     , Duckling.Temperature.AR.Corpus
                     , Duckling.Temperature.AR.Rules
                     , Duckling.Temperature.EN.Corpus
                     , Duckling.Temperature.EN.Rules
                     , Duckling.Temperature.ES.Corpus
                     , Duckling.Temperature.ES.Rules
                     , Duckling.Temperature.FR.Corpus
                     , Duckling.Temperature.FR.Rules
                     , Duckling.Temperature.GA.Corpus
                     , Duckling.Temperature.GA.Rules
                     , Duckling.Temperature.HR.Corpus
                     , Duckling.Temperature.HR.Rules
                     , Duckling.Temperature.IT.Corpus
                     , Duckling.Temperature.IT.Rules
                     , Duckling.Temperature.JA.Corpus
                     , Duckling.Temperature.JA.Rules
                     , Duckling.Temperature.KO.Corpus
                     , Duckling.Temperature.KO.Rules
                     , Duckling.Temperature.PT.Corpus
                     , Duckling.Temperature.PT.Rules
                     , Duckling.Temperature.RO.Corpus
                     , Duckling.Temperature.RO.Rules
                     , Duckling.Temperature.TR.Corpus
                     , Duckling.Temperature.TR.Rules
                     , Duckling.Temperature.ZH.Corpus
                     , Duckling.Temperature.ZH.Rules
                     , Duckling.Temperature.Helpers
                     , Duckling.Temperature.Rules
                     , Duckling.Temperature.Types

                     -- Time
                     , Duckling.Time.AR.Corpus
                     , Duckling.Time.AR.Rules
                     , Duckling.Time.DA.Corpus
                     , Duckling.Time.DA.Rules
                     , Duckling.Time.DE.Corpus
                     , Duckling.Time.DE.Rules
                     , Duckling.Time.EL.Corpus
                     , Duckling.Time.EL.Rules
                     , Duckling.Time.EN.Corpus
                     , Duckling.Time.EN.Rules
                     , Duckling.Time.EN.AU.Corpus
                     , Duckling.Time.EN.AU.Rules
                     , Duckling.Time.EN.BZ.Corpus
                     , Duckling.Time.EN.BZ.Rules
                     , Duckling.Time.EN.CA.Corpus
                     , Duckling.Time.EN.CA.Rules
                     , Duckling.Time.EN.GB.Corpus
                     , Duckling.Time.EN.GB.Rules
                     , Duckling.Time.EN.IE.Corpus
                     , Duckling.Time.EN.IE.Rules
                     , Duckling.Time.EN.IN.Corpus
                     , Duckling.Time.EN.IN.Rules
                     , Duckling.Time.EN.JM.Corpus
                     , Duckling.Time.EN.JM.Rules
                     , Duckling.Time.EN.NZ.Corpus
                     , Duckling.Time.EN.NZ.Rules
                     , Duckling.Time.EN.PH.Corpus
                     , Duckling.Time.EN.PH.Rules
                     , Duckling.Time.EN.TT.Corpus
                     , Duckling.Time.EN.TT.Rules
                     , Duckling.Time.EN.US.Corpus
                     , Duckling.Time.EN.US.Rules
                     , Duckling.Time.EN.ZA.Corpus
                     , Duckling.Time.EN.ZA.Rules
                     , Duckling.Time.ES.Corpus
                     , Duckling.Time.ES.Rules
                     , Duckling.Time.FR.Corpus
                     , Duckling.Time.FR.Rules
                     , Duckling.Time.GA.Corpus
                     , Duckling.Time.GA.Rules
                     , Duckling.Time.HR.Corpus
                     , Duckling.Time.HR.Rules
                     , Duckling.Time.HE.Corpus
                     , Duckling.Time.HE.Rules
                     , Duckling.Time.HU.Corpus
                     , Duckling.Time.HU.Rules
                     , Duckling.Time.IT.Corpus
                     , Duckling.Time.IT.Rules
                     , Duckling.Time.KO.Corpus
                     , Duckling.Time.KO.Rules
                     , Duckling.Time.NB.Corpus
                     , Duckling.Time.NB.Rules
                     , Duckling.Time.NL.Corpus
                     , Duckling.Time.NL.Rules
                     , Duckling.Time.NL.BE.Corpus
                     , Duckling.Time.NL.BE.Rules
                     , Duckling.Time.NL.NL.Rules
                     , Duckling.Time.PL.Corpus
                     , Duckling.Time.PL.Rules
                     , Duckling.Time.PT.Corpus
                     , Duckling.Time.PT.Rules
                     , Duckling.Time.RO.Corpus
                     , Duckling.Time.RO.Rules
                     , Duckling.Time.SV.Corpus
                     , Duckling.Time.SV.Rules
                     , Duckling.Time.VI.Corpus
                     , Duckling.Time.VI.Rules
                     , Duckling.Time.ZH.Corpus
                     , Duckling.Time.ZH.Rules
                     , Duckling.Time.ZH.CN.Corpus
                     , Duckling.Time.ZH.CN.Rules
                     , Duckling.Time.ZH.HK.Corpus
                     , Duckling.Time.ZH.HK.Rules
                     , Duckling.Time.ZH.MO.Corpus
                     , Duckling.Time.ZH.MO.Rules
                     , Duckling.Time.ZH.TW.Corpus
                     , Duckling.Time.ZH.TW.Rules
                     , Duckling.Time.Computed
                     , Duckling.Time.Corpus
                     , Duckling.Time.Helpers
                     , Duckling.Time.Types
                     -- REMOVE ME
                     , Duckling.Time.TimeZone.Parse

                     -- TimeGrain
                     , Duckling.TimeGrain.AR.Rules
                     , Duckling.TimeGrain.BG.Rules
                     , Duckling.TimeGrain.DA.Rules
                     , Duckling.TimeGrain.DE.Rules
                     , Duckling.TimeGrain.EN.Rules
                     , Duckling.TimeGrain.EL.Rules
                     , Duckling.TimeGrain.ES.Rules
                     , Duckling.TimeGrain.FR.Rules
                     , Duckling.TimeGrain.GA.Rules
                     , Duckling.TimeGrain.HE.Rules
                     , Duckling.TimeGrain.HI.Rules
                     , Duckling.TimeGrain.HR.Rules
                     , Duckling.TimeGrain.HU.Rules
                     , Duckling.TimeGrain.IT.Rules
                     , Duckling.TimeGrain.JA.Rules
                     , Duckling.TimeGrain.KO.Rules
                     , Duckling.TimeGrain.NB.Rules
                     , Duckling.TimeGrain.NL.Rules
                     , Duckling.TimeGrain.PL.Rules
                     , Duckling.TimeGrain.PT.Rules
                     , Duckling.TimeGrain.RO.Rules
                     , Duckling.TimeGrain.RU.Rules
                     , Duckling.TimeGrain.SV.Rules
                     , Duckling.TimeGrain.TR.Rules
                     , Duckling.TimeGrain.VI.Rules
                     , Duckling.TimeGrain.ZH.Rules
                     , Duckling.TimeGrain.Types

                     -- Url
                     , Duckling.Url.Corpus
                     , Duckling.Url.Helpers
                     , Duckling.Url.Rules
                     , Duckling.Url.Types

                     -- Volume
                     , Duckling.Volume.AR.Corpus
                     , Duckling.Volume.AR.Rules
                     , Duckling.Volume.EN.Corpus
                     , Duckling.Volume.EN.Rules
                     , Duckling.Volume.ES.Corpus
                     , Duckling.Volume.ES.Rules
                     , Duckling.Volume.FR.Corpus
                     , Duckling.Volume.FR.Rules
                     , Duckling.Volume.GA.Corpus
                     , Duckling.Volume.GA.Rules
                     , Duckling.Volume.HR.Corpus
                     , Duckling.Volume.HR.Rules
                     , Duckling.Volume.IT.Corpus
                     , Duckling.Volume.IT.Rules
                     , Duckling.Volume.KO.Corpus
                     , Duckling.Volume.KO.Rules
                     , Duckling.Volume.PT.Corpus
                     , Duckling.Volume.PT.Rules
                     , Duckling.Volume.NL.Corpus
                     , Duckling.Volume.NL.Rules
                     , Duckling.Volume.RO.Corpus
                     , Duckling.Volume.RO.Rules
                     , Duckling.Volume.RU.Corpus
                     , Duckling.Volume.RU.Rules
                     , Duckling.Volume.TR.Corpus
                     , Duckling.Volume.TR.Rules
                     , Duckling.Volume.Helpers
                     , Duckling.Volume.Rules
                     , Duckling.Volume.Types
  build-depends:       base                  >= 4.8.2 && < 5.0
                     , array                 >= 0.5.1.1 && < 0.6
                     , attoparsec            >= 0.13.1.0 && < 0.14
                     , aeson                 >= 0.11.3.0 && <= 1.4.2.0
                     , bytestring            >= 0.10.6.0 && < 0.11
                     , containers            >= 0.5.6.2 && <= 0.6.0.1
                     , deepseq               >= 1.4.1.1 && < 1.5
                     , dependent-sum         >= 0.3.2.2 && < 0.5
                     , extra                 >= 1.4.10 && < 1.7
                     , hashable              >= 1.2.4.0 && < 1.3
                     , regex-base            >= 0.93.2 && < 0.94
                     , regex-pcre-builtin
                     , text                  >= 1.2.2.1 && < 1.3
                     , text-show             >= 2.1.2 && <= 3.7.5
                     , time                  >= 1.5.0.1 && < 1.9
                     , timezone-series       >= 0.1.5.1 && < 0.2
                     , unordered-containers  >= 0.2.7.2 && < 0.3
                     , serverless-haskell
  other-modules:
      Paths_duckling
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable duckling-handler
  main-is:             Main.hs
  hs-source-dirs:      exe
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Duckling.Data.TimeZone
                       , Paths_duckling
  build-depends:       duckling
                     , base
                     , aeson
                     , bytestring
                     , directory             >= 1.2.2.0 && < 1.4
                     , extra
                     , filepath              >= 1.4.0.0 && < 1.5
                     , text
                     , text-show
                     , time
                     , timezone-olson        >= 0.1.7 && < 0.2
                     , timezone-series
                     , unordered-containers
                     , serverless-haskell
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/facebook/duckling
